{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "e71bd0af-6286-4422-9bd3-82aec59ddbe6",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "9afc5e89-652f-4661-926d-890072c9ed84",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b3ebaa15-ad66-475c-a6f8-e1490f671829",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveCJoystick",
                    "type": "Value",
                    "id": "06f38210-45c1-47e4-bb34-9d8b456d7400",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "JumpC",
                    "type": "Button",
                    "id": "b92f20ce-4d75-4763-9a60-290239edda6e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveC2DVector",
                    "type": "Value",
                    "id": "dfc06404-7261-401f-9269-c70f9f9b6771",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "movelinear",
                    "type": "Value",
                    "id": "1eb06394-c4c7-4d18-9849-9a7614c87c2d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "rotatedirection",
                    "type": "Value",
                    "id": "6f6fd297-d329-480f-8755-798e38b61b04",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "2143b3e6-b131-4b85-947f-7ab09317c9f1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "47cc6c14-7b6d-4858-aa83-cd593ac9d08e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "52b15cd5-9cfa-4b19-b4a3-260dede338f1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "09013b24-1a15-41f2-a3f9-67c8b8fa0e50",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5e1c28c6-893e-4f35-addd-e906d03451fc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ddd1bfa0-8d6d-4ffa-840d-14fe8bb93353",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Joystick",
                    "id": "26465bc2-b1d8-46c7-b7c8-4404a72106f7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCJoystick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d34b90ca-0bfc-45b1-a893-2b566308db48",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCJoystick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7cedaab4-82d0-4ef3-9099-3a239443773f",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCJoystick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3afbd595-06d6-4b5a-8960-183be3e03e90",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCJoystick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "24234db7-d513-43bd-a621-46fe10ea6485",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCJoystick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "31e83f51-5ffa-40f0-bd74-a5305e453c3f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "7a52dc88-2c60-4e47-a6d1-f2901cc4a3e0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveC2DVector",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2238c3b6-a417-442b-8d72-e116079e1813",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveC2DVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "101b0cc2-9d16-45dd-a9f5-eededfc53620",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveC2DVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6ec48a37-04bf-4b92-863d-b3233a70a1cd",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveC2DVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c1c1b11d-473e-44b6-8e93-80b7f890725f",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveC2DVector",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ForwardBackward",
                    "id": "036a4361-0d9e-413f-86eb-54b589529c84",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movelinear",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "bf09b8cd-399d-4d8e-888e-2ac900bc035f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movelinear",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "00ac9d2d-6bfc-444d-a5ec-277af72381d2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movelinear",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "leftright",
                    "id": "9d86bde6-d745-4727-978a-6d146ecab9bb",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotatedirection",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "ae478525-f7dd-4c16-b637-be531072da6d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotatedirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "24f327ce-3d23-448c-b976-d0fc35424987",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rotatedirection",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}